  acting as an HTTP Proxy. Recording of cross-site links should now
  work. Thanks to Jimmy Wang for the report.

  Remove the -proxy option from the TCPProxy. The TCPProxy now listens
  as an HTTP proxy by default unless either -remoteHost or -remotePort
  is specified.

  The TCPProxy now supports chains of filters. Some may find
  "-httpPlugin -requestFilter ECHO -responseFilter ECHO" useful.

  Enhancement from Richard Perks that allows scripts to specify the
  local interface to use for HTTP connections. See
  HTTPPluginConnection.setLocalAddress().

  HTTP Plugin enhancement: If the User-Agent header is specified,
  don't append the HTTPClient version string.

  Fix bug 836028 - incorrect platform specific separator for
  classpath. Thanks to Stefano Santoro for the report.


Grinder 3.0-beta11
------------------

  Updates to the French console translation from Betrand Ave.

  German console translation from Alblas Huibert.

  "grinder." properties specified on the agent command line are now
  passed through to worker processes. The original motivation for this
  was to allow the log directory to be set based on the system date.

  HTTPPlugin enhancements:

   - Script API to set whether an exception should be thrown when
     establishing an HTTPS connection if the server's certificate
     doesn't match the host name. The default behaviour has been
     changed to disable this check.

  Fix bug 804272 - console results table column order varies according
  to how classes are packaged. Thanks to Karl Wyer for the report.

  Updated TCPProxy documentation.

  If console cannot be contacted, don't expect console signals.

  The 'grinder' context object can now be explicitly imported from
  net.grinder.Grinder.grinder. It is good practice to add an explict
  import to the top of your scripts so that they can be called as
  Python modules from other scripts.

  Fix bug so that TestRunners are now initialised using their worker
  thread.
