@@ -1,43 +1,0 @@
-// Copyright (C) 2000, 2001, 2002, 2003 Philip Aston
-// All rights reserved.
-//
-// This file is part of The Grinder software distribution. Refer to
-// the file LICENSE which is part of The Grinder distribution for
-// licensing details. The Grinder distribution is available on the
-// Internet at http://grinder.sourceforge.net/
-//
-// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
-// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
-// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS
-// FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE
-// REGENTS OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
-// INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
-// (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
-// SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION)
-// HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
-// STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
-// ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED
-// OF THE POSSIBILITY OF SUCH DAMAGE.
-
-package net.grinder.tools.tcpproxy;
-
-
-/**
- * Define constants used by JSSE.
- *
- * @author Philip Aston
- * @version $Revision$
- */
-public final class JSSEConstants {
-
-  /** Name of property used to specifiy keystore file. */
-  public static final String KEYSTORE_PROPERTY = "javax.net.ssl.keyStore";
-
-  /** Name of property used to specifiy keystore password. */
-  public static final String KEYSTORE_PASSWORD_PROPERTY =
-    "javax.net.ssl.keyStorePassword";
-
-  /** Name of property used to specifiy keystore type. */
-  public static final String KEYSTORE_TYPE_PROPERTY =
-    "javax.net.ssl.keyStoreType";
-}
